--- a/ShoppingCart.Web/Areas/Admin/Views/Order/Index.cshtml
+++ b/ShoppingCart.Web/Areas/Admin/Views/Order/Index.cshtml
@@ -2,89 +2,94 @@
 
 @{
     ViewBag.Title = "Index";
+    //Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";//Not required --mallesh
 }
 
 <h2>Orders</h2>
-@using (Html.BeginForm())
-{
-    @Html.DisplayName("CreatedDate")
-    <input type="text" name="txtFromDate" class="Date" value="" />
-    @Html.DisplayName("To")
-    <input type="text" name="txtToDate" class="Date" value=""/>
-    @Html.DisplayName("UserName")
-    <input type="text" name="txtUserName" />
-    @Html.DisplayName("Status")
-    <select name="Status">
-        <option value="" selected>All</option>
-        <option value="Pending">Pending</option>
-        <option value="Processing">Processing</option>
-        <option value="Delivered">Delivered</option>
-        <option value="Cancelled">Cancelled</option>
-    </select>
-    <input type="submit" name="btnSearch" value="Search" class="btn btn-sm btn-primary" />
-    <input type="submit" name="btnReset" value="Reset" class="btn btn-sm btn-primary" />
-}
-<div class="panel-body" style="max-height:500px;overflow:auto;">
-<table class="table table-striped table-bordered" id="adminOrdersTable">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OrderDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeliveredDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CustomerComment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AdminComment)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Status)
-        </th>
-        <th>Retrieve</th>
-        <th>Action</th>
-    </tr>
-
-    @foreach (var item in Model)
+<div class="panel-body">
+    @using (Html.BeginForm())
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DeliveredDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerComment)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.AdminComment)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                <input type="button" id="@item.PKOrderId" value="GetOrderDetails" class="anchor" />
-            </td>
-            <td>
-                <a class="btn btn-primary" href="/Admin/Order/Edit/@item.PKOrderId">
-                    <i class="fa fa-pencil" aria-hidden="true"></i> Edit
-                </a>
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.PKOrderId }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.PKOrderId })*@
-            </td>
-        </tr>
+        @Html.DisplayName("CreatedDate")
+        <input type="text" name="txtFromDate" class="Date" value="" />
+        @Html.DisplayName("To")
+        <input type="text" name="txtToDate" class="Date" value="" />
+        @Html.DisplayName("UserName")
+        <input type="text" name="txtUserName" />
+        @Html.DisplayName("Status")
+        <select name="Status">
+            <option value="" selected>All</option>
+            <option value="Pending">Pending</option>
+            <option value="Processing">Processing</option>
+            <option value="Delivered">Delivered</option>
+            <option value="Cancelled">Cancelled</option>
+        </select>
+        <input type="submit" name="btnSearch" value="Search" class="btn btn-sm btn-primary" />
+        <input type="submit" name="btnReset" value="Reset" class="btn btn-sm btn-primary" />
     }
+</div>
+<div class="panel-body" style="max-height:500px;overflow:auto;">
+    <table class="table table-striped table-bordered" id="adminOrdersTable">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.UserName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.OrderDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DeliveredDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CustomerComment)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.AdminComment)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Status)
+                </th>
+                <th>Retrieve</th>
+                <th>Action</th>
+            </tr>
+        </thead>
 
-</table>
-    </div>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DeliveredDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CustomerComment)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.AdminComment)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
+                <td>
+                    <input type="button" id="@item.PKOrderId" value="GetOrderDetails" class="anchor" />
+                </td>
+                <td>
+                    <a class="btn btn-primary" href="/Admin/Order/Edit/@item.PKOrderId">
+                        <i class="fa fa-pencil" aria-hidden="true"></i> Edit
+                    </a>
+                    @*@Html.ActionLink("Edit", "Edit", new { id = item.PKOrderId }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.PKOrderId })*@
+                </td>
+            </tr>
+        }
+
+    </table>
+</div>
 <br />
 <table border="1" id="tblOrderDetails" style="column-width: auto;border:1px solid black;">
     <thead>
@@ -98,7 +103,7 @@
 @section scripts
 {
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    @*<script src="//code.jquery.com/jquery-1.10.2.js"></script>*@
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
