--- a/ShoppingCart.Web/Areas/Admin/Views/Category/Create.cshtml
+++ b/ShoppingCart.Web/Areas/Admin/Views/Category/Create.cshtml
@@ -20,19 +20,20 @@
                 <h3>CategoryInfo</h3>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="label-wrapper"><label class="control-label" for="Name">Name  </label><i class="fa fa-question-circle"></i></div>
+                        <div class="label-wrapper pull-right"><label class="control-label" for="Name">Name  </label><i class="fa fa-question-circle"></i></div>
                         @*<div class="label-wrapper"><label class="control-label" for="Name">Name</label><div title="The category's name." data-toggle="tooltip" class="ico-help"><i class="fa fa-question-circle"></i></div></div>*@
                     </div>
                     <div class="col-md-6">
                         <input class="form-control text-box single-line" id="newcategoryName" name="newcategoryName" type="text" value="">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" style="margin-top:5px">
                     <div class="col-md-4">
 
                     </div>
                     <div class="col-md-6">
-                        <input type="submit" id="btnCatSubmit" value="Create" class="btn btn-success" />
+                        @*@Ajax.ActionLink("Create", "",)*@
+                        <input type="submit" id="btnCatSubmit" value="Create" class="btn btn-success" style="width:30%" />
                     </div>
                 </div>
                 @*@using (Html.BeginForm())
@@ -68,6 +69,7 @@
                     }*@
             </div>
         </div>
+
         <div id="productsTab" class="tab-pane fade">
             <div class="panel-body">
                 <h3>Products Associated</h3>
@@ -76,38 +78,67 @@
         </div>
     </div>
     <hr />
-    <div>
+    <div class="btn">
         @Html.ActionLink("Back to List", "Index")
     </div>
-    <div><span></span>
-        <button class="btn btn-primary" onclick="@Html.ActionLink("Back to List", "Index")">Back</button>
-    </div>
 </div>
-<input type="submit" id="btnSubmict" value="Add Category" />
-@section scripts
+
+@*<input type="submit" id="btnSubmict" value="Add Category" />*@
+
+@section Scripts
 {
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    <script src="~/Scripts/jquery-1.7.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            $(function () {
-                $('#btnCatSubmit').click(function (event) {
-                    event.preventDefault();
-                    var category = {
-                        CategoryName: 'Shashangka'
-                    };
-                    $.ajax({
+
+            $('#btnCatSubmit').click(function () {
+                //event.preventDefault();
+                var categoryName = $('#newcategoryName').val();
+                var categoryData = {
+                    categoryName: categoryName
+                };
+                $.ajax({
                         type: "POST",
-                        url: "/Admin/Category/Create",
-                        data: JSON.stringify(category),
-                        dataType: "json",
+                        url: "Catelog/CreateNewCategory",
+                        //url: '@Url.Action("CreateNewCategory", "Catelog")',
+                        //data: JSON.parse('{ "name":"John", "age":30, "city":"New York"}'),
+                        //data: categoryData,
+                        data: "{}",
+                        dataType: "application/json",
+                        //dataType: "json",
                         contentType: 'application/json; charset=utf-8',
                         success: function (data) {
                             alert(data.msg);
                         },
-                        error: function () {
-                            alert("Error occured!!")
+                        failure: function (response) {
+                            alert(response.responseText);
+                        },
+                        error: function (jqXHR, exception) {
+                            var msg = '';
+                            if (jqXHR.status === 0) {
+                                msg = 'Not connect.\n Verify Network.';
+                            } else if (jqXHR.status == 404) {
+                                msg = 'Requested page not found. [404]';
+                            } else if (jqXHR.status == 500) {
+                                msg = 'Internal Server Error [500].';
+                            } else if (exception === 'parsererror') {
+                                msg = 'Requested JSON parse failed.';
+                            } else if (exception === 'timeout') {
+                                msg = 'Time out error.';
+                            } else if (exception === 'abort') {
+                                msg = 'Ajax request aborted.';
+                            } else {
+                                msg = 'Uncaught Error.\n' + jqXHR.responseText;
+                            }
+                            alert("Error occured! " + msg)
                         }
                     });
-                });
             });
         });
     </script>
