--- a/ShoppingCart.Web/Areas/Admin/Views/Order/Index.cshtml
+++ b/ShoppingCart.Web/Areas/Admin/Views/Order/Index.cshtml
@@ -7,25 +7,72 @@
 
 <h2>Orders</h2>
 <div class="panel-body">
-    @using (Html.BeginForm())
-    {
-        @Html.DisplayName("CreatedDate")
-        <input type="text" name="txtFromDate" class="Date" value="" />
-        @Html.DisplayName("To")
-        <input type="text" name="txtToDate" class="Date" value="" />
-        @Html.DisplayName("UserName")
-        <input type="text" name="txtUserName" />
-        @Html.DisplayName("Status")
-        <select name="Status">
-            <option value="" selected>All</option>
-            <option value="Pending">Pending</option>
-            <option value="Processing">Processing</option>
-            <option value="Delivered">Delivered</option>
-            <option value="Cancelled">Cancelled</option>
-        </select>
-        <input type="submit" name="btnSearch" value="Search" class="btn btn-sm btn-primary" />
-        <input type="submit" name="btnReset" value="Reset" class="btn btn-sm btn-primary" />
-    }
+    @*@using (Html.BeginForm())
+        {
+            @Html.DisplayName("CreatedDate")
+            <input type="text" name="txtFromDate" class="Date" value="" />
+            @Html.DisplayName("To")
+            <input type="text" name="txtToDate" class="Date" value="" />
+            @Html.DisplayName("UserName")
+            <input type="text" name="txtUserName" />
+            @Html.DisplayName("Status")
+            <select class="form-control" name="Status">
+                <option value="" selected>All</option>
+                <option value="Pending">Pending</option>
+                <option value="Processing">Processing</option>
+                <option value="Delivered">Delivered</option>
+                <option value="Cancelled">Cancelled</option>
+            </select>
+            <input type="submit" name="btnSearch" value="Search" class="btn btn-sm btn-primary" />
+            <input type="submit" name="btnReset" value="Reset" class="btn btn-sm btn-primary" />
+        }*@
+    <div>
+        @using (Html.BeginForm())
+        {
+        <div class="col-md-6"  style="margin-top:5px">
+            <div class="col-md-4">
+                @Html.Label("From Date")
+            </div>
+            <div class="col-md-7">
+                <input type="text" name="txtFromDate" class="Date form-control" value="" />
+            </div>
+            <div class="col-md-4"  style="margin-top:5px">
+                @Html.Label("To Date")
+            </div>
+            <div class="col-md-7"  style="margin-top:5px">
+                <input type="text" name="txtToDate" class="Date form-control" value="" />
+            </div>
+        </div>
+        <div class="col-md-6" style="margin-top:5px">
+            <div class="col-md-4">
+                @Html.Label("UserName")
+            </div>
+            <div class="col-md-7">
+                <input class="form-control" type="text" name="txtUserName" />
+            </div>
+            <div class="col-md-4"  style="margin-top:5px">
+                <b>Status </b>
+            </div>
+            <div class="col-md-7"  style="margin-top:5px">
+                <select class="form-control" name="Status">
+                    <option value="" selected>All</option>
+                    <option value="Pending">Pending</option>
+                    <option value="Processing">Processing</option>
+                    <option value="Delivered">Delivered</option>
+                    <option value="Cancelled">Cancelled</option>
+                </select>
+            </div>
+            
+            
+            
+        </div>
+          
+            @*@Html.DropDownList("Category", ViewBag.CategoryId as SelectList, " Select Category", new { @class = "form-control" })*@
+            
+            <input type="submit" name="btnSearch" value="Search" class="btn btn-sm btn-primary" />
+            <input type="submit" name="btnReset" value="Reset" class="btn btn-sm btn-primary" />
+        }
+    </div>
 </div>
 <div class="panel-body" style="max-height:500px;overflow:auto;">
     <table class="table table-striped table-bordered" id="adminOrdersTable">
