--- a/ShoppingCart.Web/Areas/Admin/Views/SubCategory/Index.cshtml
+++ b/ShoppingCart.Web/Areas/Admin/Views/SubCategory/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="clearfix">
     <div class="pull-left" style="font-size: 26px;">Sub Categories</div>
     <div class="pull-right">
-        <a class="btn bg-blue" href="Create"><i class="fa fa-plus-square"></i> Add New</a>
+        <a class="btn bg-blue" href="SubCategory/Create"><i class="fa fa-plus-square"></i> Add New</a>
         <button type="button" class="btn btn-success">
             <i class="fa fa-download"></i>
             Export
