--- a/ShoppingCart.Web/Views/Shared/CategoryPartialView.cshtml
+++ b/ShoppingCart.Web/Views/Shared/CategoryPartialView.cshtml
@@ -5,7 +5,8 @@
 }
 <head>
     @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
-    <script src="~/Scripts/jquery-1.12.4.min.js"></script>
+    @*<script src="~/Scripts/jquery-1.12.4.min.js"></script>*@
+    <script src="~/Scripts/jquery-3.3.1.min.js"></script>
     <script src="~/Scripts/MyScripts.js"></script>
 </head>
 <div id="catListDiv">
