--- a/ShoppingCart.Web/Areas/Admin/Views/Product/Edit.cshtml
+++ b/ShoppingCart.Web/Areas/Admin/Views/Product/Edit.cshtml
@@ -27,47 +27,48 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.FKSubCategoryId, "SubCategory", new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.DropDownList("FKSubCategoryId")
+                    @*@Html.DropDownList("FKSubCategoryId")*@
+                    @Html.DropDownList(model => model.FKSubCategoryId,Model.FKSubCategoryId, "select list", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.FKSubCategoryId)
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.ProductName, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ProductName)
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.ProductName, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.ProductName)
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Description, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Description)
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control  offset-2" } })
                     @Html.ValidationMessageFor(model => model.Description)
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Quantity, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Quantity)
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control  offset-2" } })
                     @Html.ValidationMessageFor(model => model.Quantity)
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Price, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Price)
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control  offset-2" } })
                     @Html.ValidationMessageFor(model => model.Price)
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.IsActive, new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.IsActive)
+                <div class="col-md-6">
+                    @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control  offset-2" } })
                     @Html.ValidationMessageFor(model => model.IsActive)
                 </div>
             </div>
