Frontend UI Changes done

--- a/ShoppingCart.Web/Areas/Admin/Views/Shared/_AdminHeader.cshtml
+++ b/ShoppingCart.Web/Areas/Admin/Views/Shared/_AdminHeader.cshtml
@@ -107,8 +107,8 @@
                             <img src="~/Content/img/user.jpg" class="img-circle" alt="User Image">
 
                             <p>
-                                Indian- Web Developer
-                                <small>Member since Nov. 2012</small>
+                                Indian- Software Engineer
+                                <small>Member since Nov. 2014</small>
                             </p>
                         </li>
                         <li class="user-body">
