--- a/ShoppingCart.Web/Views/Shared/UserLayout.cshtml
+++ b/ShoppingCart.Web/Views/Shared/UserLayout.cshtml
@@ -26,11 +26,19 @@
     <title>@ViewBag.Title - Store App</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-
-    @Styles.Render("~/Content/css")
+    <style>
+        /*#myUserLayoutDiv {
+            padding-top: 50px !important;
+        }*/
+    </style>
+    @*@Styles.Render("~/Content/css")*@
+    @Styles.Render("~/Bundles/css")
+    @Styles.Render("~/Bundles/js")
     @Scripts.Render("~/bundles/modernizr")
-
-    @Html.Partial("_NavBar")
+    @*<script src="~/Scripts/jquery-3.3.1.js"></script>
+        <script src="~/Scripts/bootstrap.js"></script>*@
+    @*@Html.Partial("_NavBar")*@
+    @Html.Partial("_HeaderLayout")
 </head>
 @{
     var id = Request.Url.Segments.Last();
@@ -39,16 +47,22 @@
 }
 <body>
 
-    <div class="container">
-        <div class="loader" style="display:none"></div>
+    <div class="container" id="myUserLayoutDiv">
+        @*<div class="loader" style="display:none"></div>*@
+        @*<div class="row">
+                @Html.Partial("_CategoriesPvLayout");
+            </div>*@
+        @*<div>
+                @Html.Partial("~/Views/Shared/Products/_TrendingProducts.cshtml");
+            </div>*@
         <div class="row">
-            <div class="col-xs-2">
-                @*<p style="font-weight:bold;font-size:20px;padding-left:15px;">Categories</p><br />*@
-                @Html.Partial("CategoryPartialView", (string)ViewBag.Pv_Parameter)
-            </div>
-            <div class="col-xs-10">
-                <br />
-                @*<div class="row">
+            @*<div class="col-xs-2">
+                    <p style="font-weight:bold;font-size:20px;padding-left:15px;">Categories</p><br />
+                    @Html.Partial("CategoryPartialView", (string)ViewBag.Pv_Parameter)
+
+                </div>*@
+            <div>
+                @*<div class="row"> class="col-xs-10"
                         @Html.Partial("_Breadcrumbs", (string)Request["categoryName"])
                     </div>*@
                 <div>
@@ -115,8 +129,8 @@
             </div>
         </div>
     </div>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @*@Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/bundles/bootstrap")*@
     @RenderSection("scripts", required: false)
 </body>
 </html>
