--- a/ShoppingCart.Web/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart.Web/Views/Shared/_Layout.cshtml
@@ -14,9 +14,10 @@
     </title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
-    @Styles.Render("~/Content/css")
+    @*@Styles.Render("~/Content/css")*@
+    @Styles.Render("~/Bundles/css")
     @Scripts.Render("~/bundles/modernizr")
-    @Html.Partial("_NavBar")
+    @*@Html.Partial("_NavBar")*@
     @*@Styles.Render("~/Bundles/css")*@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -24,6 +25,7 @@
     <![endif]-->
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
+
     @*<div class="wrapper">
             @Html.Partial("_Header")
             @Html.Partial("_Sidebar")
@@ -52,8 +54,8 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     @*<script src="@RouteJs.RouteJsHandler.HandlerUrl"></script>
-    <script src="@EnumHandler.HandlerUrl"></script>
-    @Scripts.Render("~/Bundles/js")
-    @RenderSection("ViewSpecificJavascript", required: false)*@
+        <script src="@EnumHandler.HandlerUrl"></script>
+        @Scripts.Render("~/Bundles/js")
+        @RenderSection("ViewSpecificJavascript", required: false)*@
 </body>
 </html>
