--- a/ShoppingCart.Web/Views/Shared/UserLayout.cshtml
+++ b/ShoppingCart.Web/Views/Shared/UserLayout.cshtml
@@ -50,7 +50,7 @@
     <div class="container" id="myUserLayoutDiv">
         @*<div class="loader" style="display:none"></div>*@
         @*<div class="row">
-                @Html.Partial("_CategoriesPvLayout");
+                @Html.Partial("_categoriespvlayout");
             </div>*@
         @*<div>
                 @Html.Partial("~/Views/Shared/Products/_TrendingProducts.cshtml");
@@ -78,8 +78,8 @@
                 <div class="row">
                     <div class="col-md-4 col-sm-6 footerleft ">
                         <div class="logofooter"><img src="/Images/Logo.jpg" height="100" /></div>
-                        <p>Online Shopping Store.</p>
-                        <p><i class="fa fa-map-pin"></i> 210, Deccansoft, opp.Pardise Hotel, Hyderabad -        110085, INDIA</p>
+                        <p>Hi-Fi Technologies.</p>
+                        <p><i class="fa fa-map-pin"></i> House No 1-7-324, Flat No 203, 2nd Floor,Pancha Sheela Towers,Parklane,Secunderabad, Hyderabad -        500003, INDIA</p>
                         <p><i class="fa fa-phone"></i> Phone (India) : +91 9******5***</p>
                         <p><i class="fa fa-envelope"></i> E-mail : info@ShoppingStore.com</p>
 
