--- a/ShoppingCart.Web/Views/Shared/_HeaderLayout.cshtml
+++ b/ShoppingCart.Web/Views/Shared/_HeaderLayout.cshtml
@@ -120,7 +120,7 @@
                                         <a href="#" class="product-image"> <img src="https://lh3.googleusercontent.com/-uwagl9sPHag/WM7WQa00ynI/AAAAAAAADtA/hio87ZnTpakcchDXNrKc_wlkHEcpH6vMwCJoC/w140-h148-p-rw/profile-pic.jpg" class="img-responsive" alt="Sample Product "> </a>
                                         <div class="product-details">
                                             <div class="close-icon"> <a href="#"><i class="fa fa-close"></i></a> </div>
-                                            <p class="product-name"> <a href="#">Sumi9xm@gmail.com</a> </p> <strong>1</strong> x <span class="price text-primary">$59.99</span>
+                                            <p class="product-name"> <a href="#">Hifi@gmail.com</a> </p> <strong>1</strong> x <span class="price text-primary">$59.99</span>
                                         </div>
                                         <!-- end product-details -->
                                     </li>
@@ -165,7 +165,9 @@
         <div class="container">
             <div class="row display-table">
                 <div class="col-sm-3 vertical-align text-left hidden-xs">
-                    <a href="/"> <img width="" src="https://lh3.googleusercontent.com/-r0Fhzz-so14/WNf9-4M65JI/AAAAAAAAD3E/ht6IhlL9gG4ujE2Hqiq70U3jBb6KQmaAQCL0B/w180-d-h43-p-rw/logo-2.png" alt=""></a>
+                    @*<a href="/" style="text-decoration:none;color:#0cd4d2"> <img width="" src="~/Content/img/hiLogo.jpg" alt="">Hi-Fi Technologies</a>*@
+                    <h4><a href="/" style="text-decoration:none;color:#0cd4d2"> Hi-Fi Technologies</a></h4>
+                    @*<a href="/"> <img width="" src="https://lh3.googleusercontent.com/-r0Fhzz-so14/WNf9-4M65JI/AAAAAAAAD3E/ht6IhlL9gG4ujE2Hqiq70U3jBb6KQmaAQCL0B/w180-d-h43-p-rw/logo-2.png" alt=""></a>*@
                 </div>
                 <!-- end col -->
                 <div class="col-sm-7 vertical-align text-center">
@@ -293,17 +295,14 @@
                     </li>
 
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="false">Page <i class="fa fa-angle-down ml-5"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="false">Hi-Fi <i class="fa fa-angle-down ml-5"></i></a>
                         <ul class="dropdown-menu dropdown-menu-left">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Register</a></li>
-                            <li><a href="#">Register or Login</a></li>
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Password Recovery</a></li>
+                            <li>@Html.ActionLink("About Us", "About", "Home")</li>
+                            <li>@Html.ActionLink("Login", "Login", "Account")</li>
+                            <li>@Html.ActionLink("Register", "Register", "Account")</li>
+                            <li>@Html.ActionLink("Contact Us", "Contact", "Home")</li>
                             <li><a href="#">Privacy Policy</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="#">404 Not Found</a></li>
-                            <li><a href="#">Short Code</a></li>
                             <li><a href="#">Coming Soon</a></li>
                         </ul>
                     </li>
