--- a/ShoppingCart.Web/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart.Web/Views/Shared/_Layout.cshtml
@@ -45,10 +45,9 @@
 
         </div>*@
     <div class="container body-content">
-        <div class="col-sm-10">
+        <div class="">
             @RenderBody()
         </div>
-        <hr />
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
