identity is updated

--- a/ShoppingCart.Web/Areas/Admin/Views/Shared/_AdminHeader.cshtml
+++ b/ShoppingCart.Web/Areas/Admin/Views/Shared/_AdminHeader.cshtml
@@ -129,7 +129,7 @@
                                 <a href="#" class="btn btn-default btn-flat">Profile</a>
                             </div>
                             <div class="pull-right">
-                                <a href="/Account/Signout" class="btn btn-default btn-flat">Sign out</a>
+                                <a href="/Account/Logout" class="btn btn-default btn-flat">Sign out</a>
                                 @*<a href="#" onclick="location.href='@Url.Action("Signout","Account")'" class="btn btn-default btn-flat">Sign out</a>*@
                             </div>
                         </li>
