--- a/ShoppingCart.Web/Views/Account/Login.cshtml
+++ b/ShoppingCart.Web/Views/Account/Login.cshtml
@@ -1,71 +1,34 @@
-﻿@model ShoppingCart.Web.Models.LoginViewModel
+﻿@model ShoppingCart.Web.ViewModel.LoginViewModelNew
+
 @{
     ViewBag.Title = "Login";
+    Layout = "~/Views/Shared/UserLayout.cshtml";
 }
+<head>
+    @Scripts.Render("~/Scripts/jquery.validate.min.js")
+    @Scripts.Render("~/Scripts/jquery.validate.unobtrusive.min.js")
 
-@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post))
-{<div class="container">
-        <fieldset>
-            <legend>Login</legend>
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary(true)
-            <div class="col-sm-12 form-group">
-                <table>
-                    <tr>
-                        <td>
-                            @Html.LabelFor(model => model.UserName)
-                        </td>
-                        <td>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                                @*<input type="text" class="form-control" name="username" id="username5" placeholder="enter your username" />*@
-                                @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                            </div>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            @Html.LabelFor(model => model.Password)
-                        </td>
-                        <td>
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                                @*<input type="password" class="form-control" name="confirm" id="confirm" placeholder="Confirm your Password" />*@
-                                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                            </div>
-                            @*@Html.EditorFor(model => model.Password)*@
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            @Html.LabelFor(model => model.RememberMe)
-                        </td>
-                        <td>
-                            @Html.EditorFor(model => model.RememberMe)
-                        </td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>
-                            <input type="submit" id="btnLogin" class="btn btn-primary btn-lg btn-block login-button" value="Login"/>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p>@Html.ActionLink("Register", "Register", "Account") if you don't have a local account.</p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-        </fieldset>
+    @{Html.EnableClientValidation(true);}
+    @{Html.EnableUnobtrusiveJavaScript(true);}
+</head>
+
+<h2>Login</h2>
+@using (Html.BeginForm("Login", "Account", FormMethod.Post))
+{
+    <div class="form-row mx-auto">
+        <div class="form-group col-md-12">
+            @Html.LabelFor(temp => temp.Username)
+            @Html.TextBoxFor(temp => temp.Username, new { placeholder = "Username", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.Username)
+        </div>
+        <div class="form-group col-md-12">
+            @Html.LabelFor(temp => temp.Password)
+            @Html.PasswordFor(temp => temp.Password, new { placeholder = "Password", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.Password)
+        </div>
+
+        @Html.ValidationSummary()
+
+        <button type="submit" class="btn btn-success">Login</button>
     </div>
-}
-
-@section Scripts{
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#Password').addClass('form-control');
-            $('#UserName').addClass('form-control');
-        });
-    </script>
 }
