--- a/ShoppingCart.Web/Views/Account/Register.cshtml
+++ b/ShoppingCart.Web/Views/Account/Register.cshtml
@@ -1,185 +1,68 @@
-﻿@model ShoppingCart.Web.UserProfile
+﻿@model ShoppingCart.Web.ViewModel.RegisterViewModel
 
 @{
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Register</h2>
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
-    @Html.AntiForgeryToken()
-
-    <div class="form-horizontal">
-        <h4>UserProfile</h4>
-        <hr />
-        @Html.ValidationSummary(true)
-
-        <div class="col col-md-12">
-            <table>
-                <tr>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.UserName)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.UserName)
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.FirstName)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.FirstName)
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.LastName)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.LastName)
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.EmailId)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.EmailId, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.EmailId)
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.Password)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.Password)
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.MobileNo)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.MobileNo, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.MobileNo)
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.MobileNo)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.MobileNo, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.MobileNo)
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.AddressLine1)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.AddressLine1, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.AddressLine1)
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.AddressLine2)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.AddressLine2, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.AddressLine2)
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.City)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.City, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.City)
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.State)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.State, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.State)
-                        </div>
-                    </td>
-                    <td>
-                        <div class="col-md-5">
-                            @Html.LabelFor(model => model.Country)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.Country, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.Country)
-                        </div>
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        <div class="col-md-5">
-                            @*new { @class = "col-md-6" }*@
-                            @Html.LabelFor(model => model.ZipCode)
-                        </div>
-                        <div class="col-md-7">
-                            @Html.EditorFor(model => model.ZipCode, new { htmlAttributes = new { @class = "form-control  offset-2" } })
-                            @Html.ValidationMessageFor(model => model.ZipCode)
-                        </div>
-                    </td>
-
-                </tr>
-
-                <tr>
-                    <td></td>
-                    <td>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-6">
-                                <input type="submit" value="Create" class="btn btn-primary btn-lg btn-block login-button" />
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-
-            </table>
-
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            @Html.LabelFor(temp => temp.Username)
+            @Html.TextBoxFor(temp => temp.Username, new { placeholder = "Username", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.Username)
+        </div>
+        <div class="form-group col-md-6">
+            @Html.LabelFor(temp => temp.Password)
+            @Html.PasswordFor(temp => temp.Password, new { placeholder = "Password", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.Password)
+        </div>
+        <div class="form-group col-md-6">
+            @Html.LabelFor(temp => temp.ConfirmPassword)
+            @Html.PasswordFor(temp => temp.ConfirmPassword, new { placeholder = "Confirm Password", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.ConfirmPassword)
         </div>
 
-    </div>
-}
+        <div class="form-group col-md-6">
+            @Html.LabelFor(temp => temp.Email)
+            @Html.TextBoxFor(temp => temp.Email, new { placeholder = "Email", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.Email)
+        </div>
 
-@*@section Scripts{
-        <script type="text/javascript">
-            $(document).ready(function () {
-                $('.control-label').addClass('');
-                $('#UserName').addClass('form-control');
-            });
-        </script>
-    }*@
+        <div class="form-group col-md-6">
+            @Html.LabelFor(temp => temp.Mobile)
+            @Html.TextBoxFor(temp => temp.Mobile, new { placeholder = "Mobile", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.Mobile)
+        </div>
+
+        <div class="form-group col-md-6">
+            @Html.LabelFor(temp => temp.DateOfBirth)
+            @Html.TextBoxFor(temp => temp.DateOfBirth, new { placeholder = "DateOfBirth", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.DateOfBirth)
+        </div>
+
+        <div class="form-group col-md-12">
+            @Html.LabelFor(temp => temp.Address)
+            @Html.TextAreaFor(temp => temp.Address, new { placeholder = "Address", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.Address)
+        </div>
+
+        <div class="form-group col-md-6">
+            @Html.LabelFor(temp => temp.City)
+            @Html.TextBoxFor(temp => temp.City, new { placeholder = "City", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.City)
+        </div>
+
+        <div class="form-group col-md-6">
+            @Html.LabelFor(temp => temp.Country)
+            @Html.TextBoxFor(temp => temp.Country, new { placeholder = "Country", @class = "form-control" })
+            @Html.ValidationMessageFor(temp => temp.Country)
+        </div>
+    </div>
+
+    @Html.ValidationSummary()
+
+    <button type="submit" class="btn btn-success">Register</button>
+}
