--- a/ShoppingCart.Web/Views/Shared/UserLayout.cshtml
+++ b/ShoppingCart.Web/Views/Shared/UserLayout.cshtml
@@ -27,9 +27,9 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <style>
-        /*#myUserLayoutDiv {
-            padding-top: 50px !important;
-        }*/
+        #myUserLayoutDiv {
+            padding-top: 0px !important;
+        }
     </style>
     @*@Styles.Render("~/Content/css")*@
     @Styles.Render("~/Bundles/css")
