--- a/ShoppingCart.Web/Views/Shared/_Layout.cshtml
+++ b/ShoppingCart.Web/Views/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
             @RenderBody()
         </div>
     </div>
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @*@Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")*@
     @RenderSection("scripts", required: false)
     @*<script src="@RouteJs.RouteJsHandler.HandlerUrl"></script>
         <script src="@EnumHandler.HandlerUrl"></script>
